--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
+    "coffee-loader": "^3.0.0",
+    "coffeescript": "^2.5.1",
     "jest": "^26.6.3",
+    "node-sass": "^4.0.0",
+    "sass-loader": "^7.3.1",
     "vue-jest": "^3.0.4"
   }
 }
